@@ -26,6 +26,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 /*
  * @description: Security configuration for JWT-based authentication and CORS
@@ -40,7 +41,22 @@ import java.util.Arrays;
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
-
+    private static final String[] PUBLIC_ROUTES = {
+            "/api/v1/auth/login",
+            "/api/v1/auth/logout",
+            "/api/v1/auth/register",
+            "/api/v1/auth/forgot-password",
+            "/api/v1/auth/resend-verification",
+            "/api/v1/auth/verify-registration",
+            "/api/v1/auth/reset-password",
+            "/api/v1/airports/**",
+            "/api/v1/flights/**",
+            "/api/v1/airlines/**"
+    };
+    private static final String[] PERMISION_ROUTES = {
+            "/api/v1/auth/change-password",
+            "/api/v1/auth/profile/me"
+    };
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http, CustomAuthExceptionHandler customHandler) throws Exception {
         http
@@ -52,18 +68,9 @@ public class SecurityConfig {
                         .accessDeniedHandler(customHandler) // xử lý 403
                 )
                 .authorizeHttpRequests(auth -> auth
-                        .requestMatchers(
-                                "/api/v1/auth/login",
-                                "/api/v1/auth/logout",
-                                "/api/v1/auth/register",
-                                "/api/v1/auth/forgot-password",
-                                "/api/v1/auth/resend-verification",
-                                "/api/v1/auth/verify-registration",
-                                "/api/v1/auth/reset-password",
-                                "/api/v1/airports"
-                        ).permitAll()
-                        .requestMatchers("/api/v1/auth/change-password",
-                                "/api/v1/auth/profile/me")
+
+                        .requestMatchers(PUBLIC_ROUTES).permitAll()
+                        .requestMatchers(PERMISION_ROUTES)
                         .hasAnyRole("USER", "ADMIN")
                 )
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
@@ -74,10 +81,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept"));
-        configuration.setAllowCredentials(true);
+        CorsConfiguration config = new CorsConfiguration();
+        config.setAllowedOrigins(List.of("http://localhost:5173"));
+        config.setAllowedMethods(List.of("GET", "POST", "PATCH", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept"));
+        config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
